@@ -31,7 +31,7 @@ FoV amulets		955/7-10	Willem Jan
 Grey cloak		285/0		-
 Green cloak		285/1		-
 Brown (fur?) cloak	285/2		Adam
-Green top		249/0		-
+Green top		249/0		sbx
 Brown/orange dress	249/1		-
 Blue dress		249/2		-
 Dark-brown hood		444/0		-
